{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 174,
  "lineage": "7f5c2cc7-3579-ec5a-b971-08ec3d68b7b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAt-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0636d67e6a97cb6d5",
            "arn": "arn:aws:ec2:us-east-1:250502052604:elastic-ip/eipalloc-0636d67e6a97cb6d5",
            "domain": "vpc",
            "id": "eipalloc-0636d67e6a97cb6d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-175-168.compute-1.amazonaws.com",
            "public_ip": "54.225.175.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:internet-gateway/igw-0fb2519068a151a8f",
            "id": "igw-0fb2519068a151a8f",
            "owner_id": "250502052604",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "balanceador",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:loadbalancer/app/balanceador-de-carga/38d02614d9bfbc10",
            "arn_suffix": "app/balanceador-de-carga/38d02614d9bfbc10",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "balanceador-de-carga-1802262250.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:loadbalancer/app/balanceador-de-carga/38d02614d9bfbc10",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balanceador-de-carga",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02de55f808a6c726a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0080f812df0e6190f"
              },
              {
                "subnet_id": "subnet-04e57f74e5fec3c04"
              }
            ],
            "subnets": [
              "subnet-0080f812df0e6190f",
              "subnet-04e57f74e5fec3c04"
            ],
            "tags": {
              "Name": "balanceador-de-carga"
            },
            "tags_all": {
              "Name": "balanceador-de-carga"
            },
            "vpc_id": "vpc-0bbf68bd669b3e901",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:loadbalancer/app/balanceador-de-carga/38d02614d9bfbc10",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "apache_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/apache-target-group/111f2f65e0a93880",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/1b94d44314d3dcca",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/1b94d44314d3dcca",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.apache_target_group",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "json_ales_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3001/1d930dbda390c100",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/026e5969c5c48953",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/ales.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/026e5969c5c48953",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f",
            "priority": 102,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.json_target_group_3001",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "json_stouts_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3002/169d8e9c85879fe8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/eb2eaf0eea4c4979",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/stouts.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/eb2eaf0eea4c4979",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f",
            "priority": 103,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.json_target_group_3002",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "json_usuarios_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3000/e63700ebfecd442c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/8d9954375869d461",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/usuarios.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f/8d9954375869d461",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/38d02614d9bfbc10/102eb5888b094b7f",
            "priority": 101,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.json_target_group_3000",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/apache-target-group/111f2f65e0a93880",
            "arn_suffix": "targetgroup/apache-target-group/111f2f65e0a93880",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/apache-target-group/111f2f65e0a93880",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "json_target_group_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3000/e63700ebfecd442c",
            "arn_suffix": "targetgroup/json-target-group-3000/e63700ebfecd442c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3000/e63700ebfecd442c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "json-target-group-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "json_target_group_3001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3001/1d930dbda390c100",
            "arn_suffix": "targetgroup/json-target-group-3001/1d930dbda390c100",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3001/1d930dbda390c100",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "json-target-group-3001",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "json_target_group_3002",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3002/169d8e9c85879fe8",
            "arn_suffix": "targetgroup/json-target-group-3002/169d8e9c85879fe8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3002/169d8e9c85879fe8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "json-target-group-3002",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0636d67e6a97cb6d5",
            "association_id": "eipassoc-025e600d1f8d2e228",
            "connectivity_type": "public",
            "id": "nat-0bafa213f6cfeb282",
            "network_interface_id": "eni-0a37a00222873155e",
            "private_ip": "10.0.101.198",
            "public_ip": "54.225.175.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e57f74e5fec3c04",
            "tags": {
              "Name": "NAT gateway"
            },
            "tags_all": {
              "Name": "NAT gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-0dc8513ce8ff4c93c",
            "id": "rtb-0dc8513ce8ff4c93c",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bafa213f6cfeb282",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-07a52497c710e0811",
            "id": "rtb-07a52497c710e0811",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb2519068a151a8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a57e68594ad65ed",
            "route_table_id": "rtb-0dc8513ce8ff4c93c",
            "subnet_id": "subnet-0e71a56abf9597caf"
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.nat-gateway-rt",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-privada",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d977a475de10b7a0",
            "route_table_id": "rtb-07a52497c710e0811",
            "subnet_id": "subnet-04e57f74e5fec3c04"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-publica-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a10459ce7908b7f4",
            "route_table_id": "rtb-07a52497c710e0811",
            "subnet_id": "subnet-0080f812df0e6190f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:security-group/sg-02de55f808a6c726a",
            "description": "Security group para ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02de55f808a6c726a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security",
            "name_prefix": "",
            "owner_id": "250502052604",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:security-group/sg-0ffcce7924a0f3438",
            "description": "Security group para las ecs contenedores",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffcce7924a0f3438",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02de55f808a6c726a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02de55f808a6c726a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "seguridad",
            "name_prefix": "",
            "owner_id": "250502052604",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-0e71a56abf9597caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e71a56abf9597caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada"
            },
            "tags_all": {
              "Name": "subred-privada"
            },
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-04e57f74e5fec3c04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e57f74e5fec3c04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica"
            },
            "tags_all": {
              "Name": "subred-publica"
            },
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-0080f812df0e6190f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0080f812df0e6190f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica-az2"
            },
            "tags_all": {
              "Name": "subred-publica-az2"
            },
            "vpc_id": "vpc-0bbf68bd669b3e901"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Desarrollo-web-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:vpc/vpc-0bbf68bd669b3e901",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ac4072564156e3b",
            "default_route_table_id": "rtb-04c38d001801f3a5c",
            "default_security_group_id": "sg-055a767bcc0f2861a",
            "dhcp_options_id": "dopt-0d5c4275442d0c4ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbf68bd669b3e901",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c38d001801f3a5c",
            "owner_id": "250502052604",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}